	"grep -q" to determine if "awk" is GNU Awk.

	* dejagnu: Use Awk instead of non-portable "grep -q" to verify
	that a file contains a help message.  Also use Awk to extract help
	messages from files, instead of a complex dynamic sed(1) program.

	* configure.ac: Remove experimental support for propagating
	CONFIG_SHELL to scripts in the source directory.

2021-04-15  Jacob Bachmeyer  <jcb@gnu.org>

	PR47382

	* dejagnu: Avoid using $? for an exit code; it is convenient until
	the tests fail because the script is run on Solaris where false
	returns 255 instead of 1 and the test harness expects exit code 1.

2021-04-14  Jacob Bachmeyer  <jcb@gnu.org>

	PR47382

	* dejagnu: Replace use of "expr :" with shell "case" pattern
	match to avoid limitations of Solaris 10 expr(1).

2021-04-08  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* configure.ac: Change "dnl" comments that should appear in
	configure to regular comments.
	Add experimental support for propagating CONFIG_SHELL to the
	config.sub and config.guess scripts in the source directory.

2021-04-01  Jacob Bachmeyer  <jcb@gnu.org>

	PR47533

	* dejagnu, commands/help.sh, commands/report-card.awk: Revise help
	message to better fit GNU conventions, with thanks to Tom Tromey
	for the reporting this issue.

	PR47382

	* runtest: Remove use of non-portable "if !" that causes problems
	with /bin/sh on Solaris 10.

	* dejagnu (Variants): Split the declaration of this read-only
	variable into an assignment followed by marking it read-only,
	instead of doing both in one statement.  The Solaris 10 /bin/sh
	does not accept the combined form.

2021-03-30  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

2021-03-26  Jacob Bachmeyer  <jcb@gnu.org>

	PR47386

	* testsuite/launcher.all/help.exp: Skip the tests on Solaris,